<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/gray">

        <EditText
            android:id="@+id/et_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_edittext"
            android:gravity="center_horizontal"
            android:hint="@string/edit_hint"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="@dimen/text_size_h6" />

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_input"
            android:layout_below="@+id/et_input"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="词牌名："
            android:textSize="@dimen/text_size_h5" />

        <Spinner
            android:id="@+id/sn_poems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_hint"
            android:layout_below="@+id/et_input"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_hint"
            android:padding="5dp"
            android:textSize="@dimen/text_size_h5" />

        <TextView
            android:id="@+id/btn_go"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/et_input"
            android:layout_alignTop="@+id/tv_hint"
            android:layout_below="@+id/et_input"
            android:background="@drawable/rounded_textview"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/go"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_h6"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_weight="2"
        android:background="@color/gray"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/result"
            android:textSize="@dimen/text_size_h5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/result"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/text_size_h6"
            android:id="@+id/tv_result" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_weight="3"
        android:background="@color/gray"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/more_result"
            android:textSize="@dimen/text_size_h5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/result"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/text_size_h5"
            android:id="@+id/tv_poem_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:singleLine="false"
            android:text="@string/result"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/text_size_h6"
            android:id="@+id/tv_content1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:singleLine="false"
            android:text="@string/result"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/text_size_h6"
            android:id="@+id/tv_content2" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="@color/gray"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:background="@drawable/rounded_textview"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/change"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_h5"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/btn_share"
            android:background="@color/black_translucent_0"
            android:scaleType="fitXY"
            android:src="@drawable/collect"
            android:id="@+id/btn_collect" />

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="30dp"
            android:background="@color/blue_light"
            android:scaleType="fitXY"
            android:src="@drawable/share" />
    </RelativeLayout>
</LinearLayout>